--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -1,130 +1,149 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .container {
-    max-width: 600px;
-    background-color: whitesmoke;
-    border-radius: 8px;
-    margin: 0.5rem auto;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
+  max-width: 600px;
+  background-color: whitesmoke;
+  border-radius: 8px;
+  margin: 0.5rem auto;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
 
 form > h3 {
-    text-align: center;
-    padding: 1rem 0;
+  text-align: center;
+  padding: 1rem 0;
 }
 
 form > div {
-    display: flex;
-    column-gap: 1rem;
-    justify-content: center;
-    padding-bottom: 1rem;
+  display: flex;
+  column-gap: 1rem;
+  justify-content: center;
+  padding-bottom: 1rem;
 }
 
 input {
-    padding: 0.5rem;
-    width: 100%;
+  padding: 0.5rem;
+  width: 100%;
 }
 
-#sec-02 h3 {
-    text-align: center;
-    background-color: rgb(92, 92, 92);
-    color: white;
-    padding: 0.5rem;
-    border-radius: 8px;
+.sort-frame { 
+  display: flex;
+  justify-content: end;
+  column-gap: 0.5rem;
+  place-items: center;
 }
 
-li.task{
-    margin: 1rem 0;
-    background-color: rgb(255, 255, 255);
-    padding: 0.5rem;
-    display: flex;
-    justify-content: space-between;
-    place-items: center;
-}
-
-li.task:hover {
-    animation: scaleBox 0.3s forwards;
-}
-
-li.disable {
-    opacity: 0.5;
-    background-color: #E5FDD1;
-    color: green;
-    text-decoration: line-through;
-}
-
-#sec-02 div.title {
-    display: flex;
-    align-items: center;
-}
-
-#sec-02 .title input {
-    border: none;
-    outline: none;
-    background-color: inherit;
+select {
+  padding: 0.3rem;
 }
 
 .header-text {
-    font-size: 1.4rem;
+  text-align: center;
+}
+
+li.task{
+  margin: 1rem 0;
+  background-color: rgb(255, 255, 255);
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  place-items: center;
+}
+
+li.task:hover {
+  animation: scaleBox 0.3s forwards;
+}
+
+.task .info {
+  padding: 0.5rem 0;
+}
+
+li.disable {
+  opacity: 0.5;
+  background-color: #E5FDD1;
+  color: green;
+}
+
+li.disable .task-title {
+  text-decoration: line-through;
+}
+
+.header-text {
+  font-size: 1.4rem;
 }
 
 button {
-    padding: 0.5rem;
-    border: none;
-    color: rgb(228, 246, 255);
+  padding: 0.5rem;
+  border: none;
+  color: rgb(228, 246, 255);
 }
 
 button:hover {
-    opacity: 0.5;
-    cursor: pointer;
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 button:active {
-    box-shadow: 0 0 0.2rem black;
+  box-shadow: 0 0 0.2rem black;
 }
 
 button[type="submit"] {
-    background-color: white;
-    border-radius: 8px;
-    color: black;
-    border: 0.1rem solid gray;
+  background-color: white;
+  border-radius: 8px;
+  color: black;
+  border: 0.1rem solid gray;
 }
 
 button[type="submit"]:hover {
-    opacity: 1;
-    background-color: rgb(216, 255, 216);
+  opacity: 1;
+  background-color: rgb(216, 255, 216);
 }
 
 button.green {
-    background-color: green;
+  background-color: green;
 }
 
 button.gray {
-    background-color: gray;
+  background-color: gray;
 }
 
 button.red {
-    background-color: red;
+  background-color: red;
 }
 
 .empty-massage {
-    text-align: center;
-    padding: 0.5rem;
-    margin: 0.5rem auto;
-    background-color: rgb(255, 172, 104);
-    color: rgb(255, 255, 255);
-    max-width: max-content;
-    opacity: 0;
-    border-radius: 8px;
-    animation: fadeIn 1s forwards;
-    font-size: medium;
+  text-align: center;
+  padding: 0.5rem;
+  margin: 0.5rem auto;
+  background-color: rgb(255, 172, 104);
+  color: rgb(255, 255, 255);
+  max-width: max-content;
+  opacity: 0;
+  border-radius: 8px;
+  animation: fadeIn 1s forwards;
+  font-size: medium;
 }
+
+.extra-info {
+  background-color: rgb(240,240,240);
+  color: gray;
+  padding: 0.2rem 0.5rem;
+  font-size: small;
+  display: flex;
+  min-width: 100%;
+  justify-content: space-between;
+  place-item: center;
+  border-radius: 6px;
+}
+
+.extra-info > span:first-child {
+  padding-right: 0.5rem;
+} 
 
 section.modal-section {
   width: 100%;
@@ -146,19 +165,19 @@ section.modal-section {
 }
 
 @keyframes scaleBox {
-    100% {
-        padding-left: 1rem;
-        box-shadow: 0 5px 0.2rem gray;
-        color: green;
-    }
+  100% {
+    padding-left: 1rem;
+    box-shadow: 0 5px 0.2rem gray;
+    color: green;
+  }
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 0.5;
-    }
+  100% {
+    opacity: 0.5;
+  }
 }
